admission_controller/k8s/fred.yml
apiVersion: apps/v1
kind:       Deployment
metadata:
  name: nginx
  labels:
    app: blee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name:            nginx
        image:           nginx
        imagePullPolicy: IfNotPresent
        ports:
        - name:          http
          protocol:      TCP
          containerPort: 80
