admission_controller/k8s/grim.yml
apiVersion: apps/v1
kind:       Deployment
metadata:
  name: grim
  labels:
    app: Grim-Reaper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grim
  template:
    metadata:
      labels:
        app: grim
    spec:
      containers:
      - name:            nginx
        image:           nginx
        imagePullPolicy: IfNotPresent
        ports:
        - name:          http
          protocol:      TCP
          containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
