admission_controller/k8s/adm_ctrl.yml
---
apiVersion: apps/v1
kind:       Deployment
metadata:
  name: depadm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: depadm
  template:
    metadata:
      labels:
        app:   depadm
    spec:
      serviceAccount: !!CHANGE_ME!!
      containers:
      - name:            depadm
        image:           k8sland/go-depadm:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - name:          https
          protocol:      TCP
          containerPort: !!CHANGE_ME!!
---
# Service
kind:       Service
apiVersion: v1
metadata:
  name: depadm
spec:
  type: ClusterIP
  selector:
    app: depadm
  ports:
    - name:       https
      protocol:   TCP
      port:       !!CHANGE_ME!!
      targetPort: https
