admission_controller/k8s/dp.yml
---
apiVersion: apps/v1
kind:       Deployment
metadata:
  name: depadm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: depadm
  template:
    metadata:
      labels:
        app:   depadm
    spec:
      serviceAccount: depadm
      containers:
      - name:            depadm
        image:           k8sland/go-depadm:0.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - name:          http
          protocol:      TCP
          containerPort: 443
---
# Service
kind:       Service
apiVersion: v1
metadata:
  name: depadm
spec:
  type: NodePort
  selector:
    app: depadm
  ports:
    - name:       https
      protocol:   TCP
      nodePort:   30443
      port:       443
      targetPort: http
