admission_controller/k8s/adm.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: depadm
webhooks:
  - name: depadm.default.svc
    rules:
      - apiGroups:
          - "apps"
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - deployments
    failurePolicy: Fail
    clientConfig:
      service:
        name: depadm
        namespace: default
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN1akNDQWFJQ0NRQ2pmYUZiQ0JJQWR6QU5CZ2txaGtpRzl3MEJBUXNGQURBZU1Sd3dHZ1lEVlFRRERCTmgKWkcxcGMzTnBiMjVmYzJGdGNHeGxYMk5oTUNBWERUSXdNREV5TVRJeE16SXhOVm9ZRHpJeU9UTXhNVEExTWpFegpNakUxV2pBZU1Sd3dHZ1lEVlFRRERCTmhaRzFwYzNOcGIyNWZjMkZ0Y0d4bFgyTmhNSUlCSWpBTkJna3Foa2lHCjl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF4WEJUZmJ2d3pSbTNHSGhhdC95RWpuTnZEdWZzUEpOM1hoUm8KRXJjcFYxcDNwWEhSdUJCai81UWRLY2ZReVNiSjZCblptbjlaSXhyejkwa1llcU1FYUFFbzJWVHYyb2owZ1pnSgo2Sy90RWllWG1i [...]
