admission_controller/k8s/validating_wh.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: depadm
webhooks:
  - name: depadm.default.svc
    rules:
      - apiGroups:
          - "apps"
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - deployments
    failurePolicy: Fail
    clientConfig:
      service:
        name: depadm
        namespace: default
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN1akNDQWFJQ0NRRDhma2pDdTB4QnFqQU5CZ2txaGtpRzl3MEJBUXNGQURBZU1Sd3dHZ1lEVlFRRERCTmgKWkcxcGMzTnBiMjVmYzJGdGNHeGxYMk5oTUNBWERUSXdNREV5TmpBMk1UZ3pNMW9ZRHpJeU9UTXhNVEV3TURZeApPRE16V2pBZU1Sd3dHZ1lEVlFRRERCTmhaRzFwYzNOcGIyNWZjMkZ0Y0d4bFgyTmhNSUlCSWpBTkJna3Foa2lHCjl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF6MGlqZ1UyS2dPckMrSitFOFdZdnVGZFphVzBHNTR1ZGFweHYKclpvZm5mN1RwaGtyVEZNY0pYcExoVUxKOFNBSXJjcFRwZTFNbFUvV3QrRmlBMm03czI2Ym5pcmxTY1VQVjZTYgpZRnZTZy9EdC92 [...]
